콘솔 확인용 코드 삭제